<resources>
    <string name="app_name">Another Simple Calculator</string>

    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>

    <string name="op_plus">+</string>
    <string name="op_minus">-</string>
    <string name="op_times">*</string>
    <string name="op_divide">/</string>

    <string name="cmd_clear">C</string>
    <string name="cmd_back">BA</string>
    <string name="cmd_equal">=</string>
    <string name="cmd_comma">,</string>
    <string name="cmd_negate">+-</string>

</resources>
